// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies plugins 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const color = 'red';

export default (() => <div className={'jsx-3382438999 ' + \`jsx-\${styles.__hash}\`}>
    <p className={'jsx-3382438999 ' + \`jsx-\${styles.__hash}\`}>test</p>
    <_JSXStyle id={\\"3382438999\\"}>{\`span.\${color}.jsx-3382438999{color:\${otherColor};}\`}</_JSXStyle>
    <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
  </div>);"
`;

exports[`babel-test plugin strips jsx attribute 1`] = `
"import styles from './styles';
const color = 'red';

export default (() => <div>
    <p>test</p>
    <style>{\`
      div.\${color} {
        color: \${otherColor};
      }
    \`}</style>
    <style>{styles}</style>
  </div>);"
`;

exports[`passes options to plugins 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const color = 'red';

export default (() => <div className={'jsx-3382438999 ' + \`jsx-\${styles.__hash}\`}>
    <p className={'jsx-3382438999 ' + \`jsx-\${styles.__hash}\`}>test</p>
    <_JSXStyle id={\\"3382438999\\"}>{\\".test.jsx-3382438999{content:\\\\\\"{\\\\\\"foo\\\\\\":false,\\\\\\"babel\\\\\\":{\\\\\\"location\\\\\\":{\\\\\\"start\\\\\\":{\\\\\\"line\\\\\\":7,\\\\\\"column\\\\\\":16},\\\\\\"end\\\\\\":{\\\\\\"line\\\\\\":11,\\\\\\"column\\\\\\":5}},\\\\\\"vendorPrefixes\\\\\\":false,\\\\\\"sourceMaps\\\\\\":false,\\\\\\"isGlobal\\\\\\":false}}\\\\\\";}\\"}</_JSXStyle>
    <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
  </div>);"
`;
